@@ -68,3 +68,4 @@
 CoreApplication *_core_application;
 std::shared_ptr<WebBrowserInterface> _web_browser;
 int _textSize;
+bool _titleBarShown;
