@@ -1,4 +1,7 @@
 1.07 - TBA
+- whether title and/or attempts should be shown are now saved
+- how many decimals to show are now saved
+- change default window size to be more narrow, as most timers are
 - changed hotkeys
 - css and jquery are now loaded locally instead of going on the internet
 - disabled css options under Window menu because they're broken at the moment
